@@ -1,12 +1,12 @@
 % Generated by roxygen2 (4.0.0): do not edit by hand
-\name{\%ha\%}
+\name{\%l*\%}
 \alias{\%ha\%}
 \alias{\%l*\%}
 \title{Hash/Dictionary Lookup}
 \usage{
-terms \%ha\% key
-
 terms \%l*\% key.match
+
+terms \%ha\% key
 }
 \arguments{
 \item{terms}{A vector of terms to undergo a lookup.}
@@ -19,12 +19,12 @@ data.frame or named list supplied no key reassign needed) or (3) a single
 vector match key.}
 }
 \description{
-\code{\%ha\%} - A deprecated binary operator version of \code{hash_look}.
-This will be removed in a subsequent version of \pkg{qdapTools}.  Use
-\code{\%hl\%} instead.
-
 \code{\%l*\%} - A deprecated binary operator version of \code{lookup}.  This
 will be removed in a subsequent version of \pkg{qdapTools}.  Use \code{\%l\%}
 instead.
+
+\code{\%ha\%} - A deprecated binary operator version of \code{hash_look}.
+This will be removed in a subsequent version of \pkg{qdapTools}.  Use
+\code{\%hl\%} instead.
 }
 
